--- a/index.html
+++ b/index.html
@@ -9,48 +9,72 @@
 </head>
 <body>
     <div class="container">
-        <section class="hero">
-            <header>
-                <h2>Header Logo</h2>
+        <div class="hero">
+            <div class="header">
+                <p class="logo">Header Logo</p>
                 <div class="links">
-                    <a href="">About</a>
-                    <a href="">Contact Us</a>
-                    <a href="">Community</a>
+                    <a class="link" href="">About</a>
+                    <a class="link" href="">Contact Us</a>
+                    <a class="link" href="">Community</a>
                 </div>
-            </header>
-            <main>
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign up</button>
-                <img src="./apple.png" alt="apple">
-            </main>
-        </section>
-        <section class="info">
+            </div>
+            <div class="main">
+                <div class="left">
+                <p class="big">This website is awesome</p>
+                <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="btn1">Sign up</button>
+                </div>
+                <img class="banana" src="./apple.png" alt="apple">
+            </div>
+        </div>
+        <div class="info">
             <h1>Some random information</h1>
-            <img src="./banana.png" alt="">
-            <p>This is some subtext under an illustration or image</p>
-            <img src="./banana.png" alt="">
-            <p>This is some subtext under an illustration or image</p>
-            <img src="./banana.png" alt="">
-            <p>This is some subtext under an illustration or image</p>
-            <img src="./banana.png" alt="">
-            <p>This is some subtext under an illustration or image</p>
-        </section>
-        <section class="quote">
-            <h1>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i 
-                know is that it looks nice</h1>
-            <p>-Thor, God of Thunder</p>
-        </section>
-        <section class="call">
-            <h2>Call to action! It's time!</h2>
-            <p>Sign up for your product by clicking that button right over there!</p>
-            <button>Sign up</button>
-        </section>
-        <section class="footer">
-            <footer>
+            <div class="images">
+                <div class="image">
+                    <img class="infoimg" src="./banana.png" alt="">
+                    <div class="text">
+                        <p>This is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="image">
+                    <img class="infoimg" src="./banana.png" alt="">
+                    <div class="text">
+                        <p>This is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="image">
+                    <img class="infoimg" src="./banana.png" alt="">
+                    <div class="text">
+                        <p>This is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="image">
+                    <img class="infoimg" src="./banana.png" alt="">
+                    <div class="text">
+                        <p>This is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="quotes">
+            <div class="quote">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i 
+                    know is that it looks nice</p>
+                <p class="quoter">-Thor, God of Thunder</p>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="call">
+                <div class="calltxt">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for your product by clicking that button right over there!</p>
+                </div>
+                <button class="btn2">Sign up</button>
+            </div>
+        </div>
+        <div class="footer">
                 <p>Copyright © Janceboy 2022</p>
-            </footer>
-        </section>
+        </div>
     </div>
 </body>
 </html>
